# Talamus-Wiki

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  dev.py  index.html  llms-install.md  mkdocs.yml  pyproject.toml  requirements.txt  server.json
.goose-plugin/: plugin.json
FDE Brain/: AI-Accelerator-Selection-Framework.md  AI-Accelerator-Selection.md  AI-Agent-Definition-and-Components.md  AI-Agent-Framework.md  AI-Agent.md  AI-Agents-and-Tool-Use.md  AI-Agents.md  AI-Application-Architecture-Framework.md  AI-Application-Architecture-Progression.md  AI-Application-Development-Lifecycle.md  AI-Application-Development-Loop.md  AI-Application-Enhancement-Pipeline.md  AI-Application-Evaluation-Framework.md  AI-Application-Evaluation-Playbook.md  AI-Application-Feasibility-Check.md  AI-Application-Interface-Patterns.md  AI-Application-Planning-Framework.md  AI-Application-Scoping-Framework.md  AI-Assessment-Simulation.md  AI-Assisted-Content-Generation-Pipeline.md  AI-Assisted-Software-Engineering.md  AI-Business-Impact-Metrics.md  AI-Communication-Refinement-Layer.md  AI-Component-Definition.md  AI-Content-Misuse-SEO-Farming.md  AI-Data-Flywheel.md  AI-Development-Focus-Shift-Traditional-ML-vs-Foundation-Models.md  AI-Driven-Ideation-and-Brainstorming.md  AI-Engineering-Architecture-Progression.md  AI-Engineering-Architecture.md  AI-Engineering-Drivers-The-Three-Factors.md  AI-Engineering-Roles-and-Skillset.md  AI-Engineering-Scope-Definition.md  AI-Engineering-Stack.md  AI-Engineering-Workflow.md  AI-Engineering-vs-ML-Engineering.md  AI-Engineering-vs.-ML-Engineering.md  AI-Engineering.md  AI-Evaluation-Criteria-Taxonomy.md  AI-Evaluation-Experiment-Tracking.md  (+695 more)
benchmarks/: README.md  one_screen.py  run.py  token_efficiency.py
dev/: ARCHITECTURE.md  CONSTRAINTS.md  PRODUCT.md  ROADMAP.md  STATE.md
docs/: agent-tool-calling.md  architecture.md  benchmarks.md  commands.md  (+6 more)
(+510 files in other folders)
