[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-knowledge-brain"
version = "0.1.0"
description = "Local-first knowledge compiler with graph-first retrieval for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Local Knowledge Brain Contributors" }
]
dependencies = []

[project.optional-dependencies]
docling = ["docling>=2.0"]
dev = []

[project.scripts]
brain = "brain.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-dir = "tests"
