[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kortex"
version = "0.1.0"
description = "Local-first knowledge compiler with graph-first retrieval for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Kortex Contributors" }
]
dependencies = []

[project.optional-dependencies]
docling = ["docling>=2.0"]
mcp = ["mcp>=1.0"]
dev = []

[project.scripts]
kortex = "kortex.cli:main"
kortex-mcp = "kortex.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-dir = "tests"
